--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="loteria.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,6 +36,9 @@
           <div class="result" id="resultName">-</div>
       </div>
       <br />
+      <ul id="container2">
+        
+      </ul>
       <input class="btn btnC" type="button" onclick="cleanup()" value="Limpar resultado" />
       <script src="script.js"></script>
     </div>
